Clean up pass over sections 2-3.
git-svn-id: svn://svn.code.sf.net/p/x10/code@4080 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.man/paper/master.bib
+++ b/trunk/x10.man/paper/master.bib
@@ -2421,7 +2421,7 @@ Pisa, August 1996"
 @inproceedings{aiken93,
 author = "Alexander Aiken and Edward L. Wimmers",
 title = "Type inclusion constraints and type inference",
-booktitle = "{FPCA}",
+booktitle = "Conference on Functional Programming Languages and Computer Architecture ({FPCA})",
 location = "Copenhagen, Denmark",
 pages = "31--41",
 month = jun,
@@ -2528,3 +2528,19 @@ year = 1993
   Year = 1995
 }
 
+@book{nielson-multistage,
+  author = "Flemming Nielson and Hanne Riis Nielson",
+  title = "Two-level functional languages",
+  publisher = "Cambridge University Press",
+  city = "New York, NY",
+  year = 1992 
+}
+
+@inproceedings{ts97-multistage,
+  author = "Walid Taha and Tim Sheard",
+  title = "Multi-stage programming with explicit annotations",
+  booktitle = "{ACM/SIGPLAN} Workshop on Partial Evaluation and Semantics-Based Program Manipulation",
+  location = "Amsterdam, The Netherlands",
+  pages = "203--217",
+  year = 1997
+}
